--- a/index.html
+++ b/index.html
@@ -10,17 +10,13 @@ session_start();
     <source src="mp4/oya.mp4" type="video/mp4">
   </video>
 
-  <form action="index2.php" method="get">
+  <form action="index2.php" method="post">
 
       First name: <input type="text" name="fname"><br>
       Last name: <input type="text" name="lname"><br>
       <input type="submit" value="Submit">
 
 
-  <input type="text" name="email">
-       <input type="submit" name="submit">;
-       <input type="submit" name="borrar" value="borrar">;
-       <input type="submit" name="passar" value="passar">;
 
       </form>
 
@@ -99,6 +95,7 @@ mysqli_close($link);
   <div class="overlay"></div>
   <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
     <source src="mp4/oya.mp4" type="video/mp4">
+
   </video>
 
   <div class="masthead">
@@ -107,15 +104,13 @@ mysqli_close($link);
       <div class="row h-100">
         <div class="col-12 my-auto">
           <div class="masthead-content text-white py-5 py-md-0">
-            <h1 class="mb-3">Coming Soon!</h1>
+            <h1 class="mb-3">OYA OYA?!</h1>
             <p class="mb-5">Estamos trabajando para abrir lo antes posible, en
-              <strong>Septiembre</strong> pon tu correo para recibir un aviso con descuentos!</p>
+              <strong>Septiembre</strong> haz CLICK en el enlace para enviarme un correo y avisarte con muchos regalos y deja cualquier
+               petición o pedido personalizado que te gustaria!</p>
+              <a href="mailto:fresianistore@gmail.com?Subject=Avisame%20cuando%20abras%20"><h2>APUNTAME !! </h2></a>
             <div class="input-group input-group-newsletter">
               <form action="index2.php" method="post">
-
-
-              <input type="text" name="email">
-                   <input type="submit" name="submit">;
 
 
               </form>
@@ -131,17 +126,17 @@ mysqli_close($link);
   <div class="social-icons">
     <ul class="list-unstyled text-center mb-0">
       <li class="list-unstyled-item">
-        <a href="#">
+        <a href="https://twitter.com/xFresi">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
       <li class="list-unstyled-item">
-        <a href="#">
+        <a href="https://m.facebook.com/fresianistore-100808831760294/">
           <i class="fab fa-facebook-f"></i>
         </a>
       </li>
       <li class="list-unstyled-item">
-        <a href="#">
+        <a href="https://www.instagram.com/fresi.anistore/">
           <i class="fab fa-instagram"></i>
         </a>
       </li>
