--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ mysqli_close($link);
   <div class="social-icons">
     <ul class="list-unstyled text-center mb-0">
       <li class="list-unstyled-item">
-        <a href="https://twitter.com/xFresi">
+        <a href="">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
